Fixed upload link not showing on firefox/waterfox

--- a/public/css/home-stylesheet.css
+++ b/public/css/home-stylesheet.css
@@ -118,6 +118,29 @@ input[type="text"] {
 	display: none;	
 }
 
+.jumbotron #upload .link {
+	float: left;
+
+	background-color: #ffffff;
+	border: 1px solid #cccccc;
+
+	display: inline-block;
+	/*height: 20px;*/
+	padding: 4px 6px;
+	margin-bottom: 10px;
+	font-size: 14px;
+	line-height: 20px;
+	color: #555555;
+	vertical-align: middle;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+.jumbotron #upload #copy {
+	margin-left: -5px;
+}
+
 /* Supporting marketing content */
 .marketing {
 	margin: 60px 0;
